tests/jsx_intrinsics.builtin/jsx_intrinsics.builtin.exp
Error ------------------------------------------------------------------------------------------------------ main.js:9:4

Cannot assign `<CustomComponent />` to `b` because `CustomComponent` [1] is incompatible with `CustomComponentNope` [2]
in type argument `ElementType` [3]. [incompatible-type-arg]

   main.js:9:4
     9|   <CustomComponent prop="asdf" />; // Error: Bad class type
           ^^^^^^^^^^^^^^^

References:
   main.js:3:7
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^ [1]
   main.js:4:7
     4| class CustomComponentNope extends React.Component<{prop: string}, void> {}
              ^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:146:36
   146| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                           ^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- main.js:11:3

Cannot assign `<CustomComponent />` to `c` because property `prop1` is missing in object type [1] but exists in object
type [2] in type argument `P` [3]. [prop-missing]

   main.js:11:3
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   main.js:3:47
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
                                                      ^^^^^^^^^^^^^^ [1]
   main.js:10:59
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                                  ^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:146:69
   146| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                                                            ^ [3]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because property `prop` is missing in object type [1] but exists in object
type [2] in type argument `Props` [3] of type argument `ElementType` [4]. [prop-missing]

   main.js:11:4
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
           ^^^^^^^^^^^^^^^

References:
   main.js:10:59
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                                  ^^^^^^^^^^^^^^^ [1]
   main.js:3:47
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
                                                      ^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:30:31
    30| declare class React$Component<Props, State = void> {
                                      ^^^^^ [3]
   <BUILTINS>/react.js:146:36
   146| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                           ^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- main.js:11:4

Cannot assign `<CustomComponent />` to `c` because property `prop1` is missing in object type [1] but exists in object
type [2] in type argument `Props` [3] of type argument `ElementType` [4]. [prop-missing]

   main.js:11:4
    11|   <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
           ^^^^^^^^^^^^^^^

References:
   main.js:3:47
     3| class CustomComponent extends React.Component<{prop: string}, void> {}
                                                      ^^^^^^^^^^^^^^ [1]
   main.js:10:59
    10| var c: ExactReactElement_DEPRECATED<Class<React.Component<{prop1: string}, void>>> =
                                                                  ^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:30:31
    30| declare class React$Component<Props, State = void> {
                                      ^^^^^ [3]
   <BUILTINS>/react.js:146:36
   146| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                           ^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------------- main.js:16:47

Cannot assign `<div />` to `e` because `HTMLDivElement` [1] is incompatible with `HTMLSpanElement` [2] in type argument
`T` [3] of the first parameter of property `onAbort` of type argument `P` [4]. [incompatible-type-arg]

   main.js:16:47
    16| var e: ExactReactElement_DEPRECATED<'span'> = <div id="asdf" />;
                                                      ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:213:65
   213|   div: ReactDOM$HTMLElementJSXIntrinsicTyped<ReactDOM$divProps, ReactDOM$divInstance>,
                                                                        ^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:277:67
   277|   span: ReactDOM$HTMLElementJSXIntrinsicTyped<ReactDOM$spanProps, ReactDOM$spanInstance>,
                                                                          ^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react-dom.js:31:31
    31| declare class SyntheticEvent<+T: EventTarget = EventTarget, +E: Event = Event> {
                                      ^ [3]
   <BUILTINS>/react.js:146:69
   146| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                                                            ^ [4]


Error ---------------------------------------------------------------------------------------------------- main.js:16:48

Cannot assign `<div />` to `e` because `div` [1] is incompatible with string literal `span` [2] in type argument
`ElementType` [3]. [incompatible-type-arg]

   main.js:16:48
    16| var e: ExactReactElement_DEPRECATED<'span'> = <div id="asdf" />;
                                                       ^^^ [1]

References:
   main.js:16:37
    16| var e: ExactReactElement_DEPRECATED<'span'> = <div id="asdf" />;
                                            ^^^^^^ [2]
   <BUILTINS>/react.js:146:36
   146| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                           ^^^^^^^^^^^ [3]



Found 6 errors
